--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_background_service: ^2.4.1
   flutter_svg: ^1.0.0
   http: ^0.13.5
-  intl: ^0.17.0
-  
+  intl: ^0.17.0  
   provider: ^6.0.3
   sqflite: ^2.0.0+3
 
